tests/integrations/basic-fail-mode/tests/actual_tests/foomp.stderr
error[E0308]: mismatched types
 --> tests/actual_tests/foomp.rs:4:9
  |
4 |     add("42", 3);
  |     --- ^^^^ expected `usize`, found `&str`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> $DIR/tests/integrations/basic-fail-mode/src/lib.rs:1:8
  |
1 | pub fn add(left: usize, right: usize) -> usize {
  |        ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
